# Adopte_un_resto

./: .gitignore  Accueil.py  CHANGELOG.md  README.md  install-hooks.py  pyproject.toml  scraping.py  script.py  surprends_moi.py  utils.py
data/: gouter_Tess.csv  historique.csv  restaurants.csv  scraping.csv
pages/: 1_✨_Nouveautés.py  1_🌱_Adresses_vegan.py  2_🌱_Adresses_vegan.py  2_🙊_Surprends_moi.py  3_🐹_Gouter_de_la_grosse_Tess.py  3_🙊_Surprends_moi.py
python/: connexion.py  utils.py
python/data/: 1_resto.csv  restaurants.csv  restaurants2.csv  scraping.csv
python/pages/: 1_🍽️_Adopte_un_resto.py  2_🙊_Surprends_moi.py  2_🙊_Surprends_moi_1.py  3_🤗_Citioyens.py
python/scraping/: scraping.py
