[tool.poetry]
name = "squad-m"
version = "1.0.0"
description = "Squad M repo"
authors = ["Technical Admin <technical-admin@cit.io>"]

[tool.poetry.dependencies]
python = "3.11.0"
beautifulsoup4 = "4.9.3"
geojson = "2.5.0"
haversine = "2.1.2"
numpy = "1.24.3"
seaborn = "0.11.1"
pandas = "1.5.*"
GitPython = "^3.1.29"
itables = "^1.3.0"
plotly = "^5.17.0"
streamlit = "^1.29.0"
streamlit-dynamic-filters = "^0.1.4"
folium = "^0.15.1"
streamlit-folium = "^0.18.0"


[tool.poetry.group.dev.dependencies]
citio-python-dev = {git = "ssh://git@gitlab.dev.cit.io/citio/back-end/citio-python-dev.git", rev = "v1.0.5"}


[[tool.poetry.source]]
name = "citio-packages"
url = "https://europe-west1-python.pkg.dev/cit-io-dev/citio-packages/simple"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
