[tool.poetry]
name = "squad-m"
version = "1.0.0"
description = "Squad M repo"
authors = ["Squad M Hackaton Citio"]

[tool.poetry.dependencies]
python = "3.11.7"
numpy = "1.24.3"
pandas = "1.5.*"
GitPython = "^3.1.29"
streamlit = "^1.29.0"
streamlit-dynamic-filters = "^0.1.4"
folium = "^0.15.1"
streamlit-folium = "^0.18.0"
streamlit-card = "^1.0.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
